--- a/style.css
+++ b/style.css
@@ -1,7 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url(https://db.onlinewebfonts.com/c/0a6ee448d1bd65c56f6cf256a7c6f20a?family=Bahnschrift);
+@import url(https://db.onlinewebfonts.com/c/9f5af5bd3b02c9efd39b88ea75ddad47?family=Helvetica);
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
-h1  {
-    font-family: 'Roboto', sans-serif;
-    letter-spacing: 0;
-    text-shadow: 2px 5px 2px blue;
+body {
+	background-color: #faf8f6;
+}
+
+a {
+	font-family: Arial, Helvetica, sans-serif;
+	text-decoration: none;
+	font-size: 13px;
+	font-weight: bold;
+	color: #4695c1;
+}
+
+nav {
+	margin-top: 30px;
+	display: flex;
+	justify-content: center;
+	gap: 40px;
 }
