--- a/style.css
+++ b/style.css
@@ -20,3 +20,57 @@ nav {
 	justify-content: center;
 	gap: 40px;
 }
+
+nav a:hover {
+	text-decoration: underline;
+	text-underline-offset: 10px;
+	color: #4695c1;
+	text-decoration-thickness: 7px;
+	text-decoration-color: #4695c1;
+}
+
+.content img {
+	width: 45%;
+	margin-top: -190px;
+	display: flex;
+	margin-left: 10%;
+}
+
+.content h1{
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight: bold;
+	font-size: 50px;
+	color: #3d3d3d;
+	text-align: center;
+	position: relative;
+	margin-top: -46%;
+	margin-left: 30%;
+	
+}
+
+.content p{
+	font-family: "Open Sans", sans-serif;
+	font-weight:600;
+	font-size: 20px;
+	color: #4695c1;
+	position: relative;
+	text-align: center;
+	margin-left: 30%;
+}
+
+.content a{
+	padding: 30px;
+	background-color: #4695c1;
+	color: white;
+	border-radius: 50px;
+	width: 220px;
+
+	
+}
+
+.about-me-button{
+	margin-right:  0%;
+	justify-content: center;
+
+	
+}
