--- a/home.css
+++ b/home.css
@@ -2,75 +2,86 @@
 @import url(https://db.onlinewebfonts.com/c/9f5af5bd3b02c9efd39b88ea75ddad47?family=Helvetica);
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
-body {
+body{
 	background-color: #faf8f6;
 }
 
-a {
+.container{
+	justify-content: center;
+	align-items: center;
+	height: 80vh;
+}
+
+
+
+
+
+
+
+
+
+ a{
 	font-family: Arial, Helvetica, sans-serif;
 	text-decoration: none;
-	font-size: 13px;
 	font-weight: bold;
 	color: #4695c1;
 }
 
-nav {
+nav{
 	margin-top: 30px;
 	display: flex;
 	justify-content: center;
+	font-size: 13px;
 	gap: 40px;
 }
 
-nav a:hover {
+
+
+
+
+a:hover{
 	text-decoration: underline;
 	text-underline-offset: 10px;
 	color: #4695c1;
 	text-decoration-thickness: 7px;
-	text-decoration-color: #4695c1;
+	cursor: pointer;
 }
 
-.content img {
-	width: 45%;
-	margin-top: -190px;
+ 
+
+
+
+
+
+.content{
 	display: flex;
-	margin-left: 10%;
+	align-items: center;
+	
 }
 
-.content h1{
+.content-name{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	float: inline-end;
+	margin-top: -80%;
+	
+}
+
+.content-name h1{
 	font-family: Arial, Helvetica, sans-serif;
 	font-weight: bold;
-	font-size: 50px;
-	color: #3d3d3d;
-	text-align: center;
-	position: relative;
-	margin-top: -46%;
-	margin-left: 30%;
-	
+	font-size: 35px;
 }
 
-.content p{
-	font-family: "Open Sans", sans-serif;
-	font-weight:600;
-	font-size: 20px;
-	color: #4695c1;
-	position: relative;
-	text-align: center;
-	margin-left: 30%;
+
+
+
+.content img{
+	margin-top: -20%;
+	width: 70%;
+	margin-left: 100px;
 }
 
-.content a{
-	padding: 30px;
-	background-color: #4695c1;
-	color: white;
-	border-radius: 50px;
-	width: 220px;
 
-	
-}
 
-.about-me-button{
-	margin-right:  0%;
-	justify-content: center;
-
-	
-}
