--- a/style.css
+++ b/style.css
@@ -28,6 +28,13 @@ nav ul{
 	color: #4695c1;
 }
 
+a:hover{
+	text-decoration: underline;
+	text-underline-offset: 10px;
+	color: #4695c1;
+	text-decoration-thickness: 7px;
+}
+
 .intro{
 	display: flex;
 	align-items: center;
@@ -40,14 +47,13 @@ nav ul{
 
 .profile-pic img{
 	width: 70%;
-	margin-left: 170px;
+	margin-left: 215px;
 	margin-top: -25%;
 }
 
 .intro-text{
-	margin-top: -30%;
-	margin-left: -210px;
-	
+	margin-top: 100px;
+	margin-left: -215px;
 }
 
 
@@ -56,7 +62,7 @@ nav ul{
 	font-family: Arial, Helvetica, sans-serif;
 	font-weight: bold;
 	font-size: 40px;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 
 .intro-text h2{
@@ -64,11 +70,31 @@ nav ul{
 	font-size: 20px;
 	font-weight: lighter;
 	color: #4695c1;
-	margin-bottom: 20px;
+	margin-bottom: 15%;
+	margin-left: 20px;
 }
 
 .button{
+	padding:  30px;
+	background-color: #4695c1;
+	color: #FFF;
+	width: 70%;
+	border-radius: 50px;
+	margin-left: 30%;
 	
+}
+
+.social-links{
+	margin-top: -65%;
+	margin-right: 50px;
+}
+
+
+
+
+
+.social-links img {
+    width: 350px;
 }
 
 
