--- a/about-me.css
+++ b/about-me.css
@@ -27,3 +27,21 @@ nav ul{
 	font-size: 13px;
 	color: #4695c1;
 }
+
+.about-me{
+    display: flex;
+    align-items: center;
+}
+
+.foto{
+    flex: 1;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.foto img{
+    width: 70%;
+	margin-left: 215px;
+	margin-top: 20%;
+}
+
