--- a/about-me.css
+++ b/about-me.css
@@ -25,7 +25,7 @@ nav ul{
 
 .about-me{
     display: flex;
-    align-items: center;
+	justify-content: center;
 }
 
 .foto{
@@ -35,8 +35,42 @@ nav ul{
 }
 
 .foto img{
-    width: 70%;
-	margin-left: 215px;
+	margin-top: -40%;
+    width: 100%;
+	margin-left: 50px;
+}
+
+.info {
+	flex: 1;
+	padding: 20px;
+	
+}
+
+.info h2{
+	color: #3d3d3d;
+	font-family: "Bahnschrift";
+	font-size: 25px;
+	font-weight: lighter;
+	margin-bottom: 10px;
+	margin-left: -40px;
+}
+
+.info p{
+	font-family: "Open Sans", sans-serif;
+	font-style: normal;
+	font-size: 17px;
+}
+
+.info-text {
 	margin-top: 20%;
+	margin-bottom: 30px;
+}
+
+.button{
+	border-radius: 50px;
+	margin-top: 10px;
+	padding:  15px;
+	background-color: #4695c1;
+	color: #FFF;
 }
 
