--- a/about-me.css
+++ b/about-me.css
@@ -74,3 +74,62 @@ nav ul{
 	color: #FFF;
 }
 
+.skills{
+	display: flex;
+	justify-content: space-between;
+	margin-top: 40px;
+}
+
+.skills h2{
+	text-align: center;
+}
+
+.professional-skills, .basic-skills{
+	flex: 1;
+	margin: 0 20px;
+	
+}
+
+.professional-skills h3, .basic-skills h3 {
+	font-family: "Open Sans", sans-serif;
+	font-weight: 500;
+	color: #3d3d3d;
+	text-align: center;
+	font-size: 20px;
+
+}
+
+
+
+.skill{
+	margin-bottom: 15px;
+}
+
+
+.skill span{
+	display: block;
+	font-weight: bold;
+	margin-bottom: 5px;
+	font-family: "Open Sans", sans-serif;
+	font-weight: 500;
+	font-size: 15px;
+}
+
+.progress{
+	background-color: #efecea;
+	border-radius: 20px;
+	overflow: hidden;
+}
+
+.progress-bar{
+	background-color: #4695c1;
+	height: 20px;
+	line-height: 20px;
+	color: #FFF;
+	text-align: center;
+	border-radius: 20px 0 0 20px;
+	font-family: "Open Sans", sans-serif;
+	font-weight: 500;
+}
+
+ 
