--- a/docs/contact.css
+++ b/docs/contact.css
@@ -45,11 +45,10 @@ a:hover
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     display: flex;
-    justify-content: center;
+    margin: auto;
     width: 70%;
     max-width: 800px;
     text-align: center;
-	margin-left: 25%;
 	margin-top: 9%;
 	
 }
@@ -91,7 +90,7 @@ a:hover
 }
 
 .map-container {
-    margin-left: 27%;
+    margin: auto;
     margin-top: 20px;
     width: 70%;
     max-width: 800px;
@@ -129,7 +128,42 @@ a:hover
 
 
 
+@media (max-width: 480px) {
+    .contact-container {
+        flex-direction: column;
+        padding: 10px;
+        
+    }
 
+    .contact-item {
+        padding: 10px 0;
+        width: 100%;
+        text-align: center;
+    }
 
+    .icon {
+        width: 30px;
+        height: 30px;
+    }
 
+    .title {
+        font-size: 16px;
+    }
+
+    .info {
+        font-size: 14px;
+    }
+
+    .map-container iframe {
+        height: 200px; /* Verklein de hoogte van de kaart nog verder voor kleinere schermen */
+    }
+
+    .outer {
+        padding: 5px 0;
+    }
+
+    .outer p {
+        font-size: 12px; /* Nog een verkleining voor kleinere schermen */
+    }
+}
 
