--- a/docs/about-me.css
+++ b/docs/about-me.css
@@ -33,13 +33,13 @@ nav ul{
 .foto{
     flex: 1;
     text-align: center;
-    margin-top: 50px;
+    margin: auto;
 }
 
 .foto img{
-	margin-top: -40%;
+	margin-top: -13%;
     width: 100%;
-	margin-left: 50px;
+	
 }
 
 .info {
@@ -64,8 +64,9 @@ nav ul{
 }
 
 .info-text {
-	margin-top: 20%;
-	margin-bottom: 30px;
+	margin-top: 30%;
+	margin-bottom: 50px;
+	
 }
 
 .button{
@@ -93,8 +94,8 @@ nav ul{
 .professional-skills, .basic-skills{
 	flex: 1;
 	margin: 0 20px;
-	margin-top: 0;
-	margin-bottom: 50%;
+	margin-bottom: 40%;
+	
 }
 
 .professional-skills h3, .basic-skills h3 {
@@ -104,6 +105,10 @@ nav ul{
 	text-align: center;
 	font-size: 20px;
 
+}
+
+.contact{
+	margin-bottom: 0;
 }
 
 .contact strong{
@@ -223,6 +228,8 @@ nav ul{
     font-style: normal;
     text-align: center;
 }
+
+
 
 
 
