--- a/docs/home.css
+++ b/docs/home.css
@@ -29,22 +29,26 @@ nav ul{
 .intro{
 	display: flex;
 	align-items: center;
+	
 
 }
 
 .profile-pic{
-	position: relative;
+	margin: auto;
+	
 }
 
 .profile-pic img{
 	width: 70%;
-	margin-left: 215px;
-	margin-top: -25%;
+	margin-left: 35%;
+	margin-top: -15%;
+	
 }
 
 .intro-text{
-	margin-top: 100px;
-	margin-left: -215px;
+	margin: auto;
+	margin-right:  20%;
+	margin-top: 15%;	
 }
 
 
@@ -54,6 +58,7 @@ nav ul{
 	font-weight: bold;
 	font-size: 40px;
 	margin-bottom: 10px;
+	
 }
 
 .intro-text h2{
