--- a/home.css
+++ b/home.css
@@ -116,6 +116,10 @@ nav ul{
     text-align: center;
 }
 
+.menu-close{
+	display: none;
+}
+
 
 @media (max-width:480px) {
 	.intro{
@@ -172,6 +176,91 @@ nav ul{
     .outer p {
         font-size: 12px; 
     }
+
+	.menu-container{
+		position: relative;
+	}
+
+	.menu-icon{
+		font-size: 24px;
+		cursor: pointer;
+		color: white;
+	}
+
+	.menu-icon div{
+		width: 35px;
+		height: 5px;
+		background-color: #4695c1;
+		margin: 6px;
+		transition: 0.4s;
+	}
+
+	.menu a{
+		color: white;
+		display: block;
+		text-align: center;
+		margin-top: 30px;
+	}
+
+	.menu {
+		height: 100%;
+		width: 100%;
+		position: fixed;
+		top: 0;
+		right: 0;
+		background-color: #4695c1;
+		overflow-x: hidden;
+		padding-top: 12px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		visibility: hidden;
+		transition: opacity 0.5s; visibility: 0.5s;
+	}
+
+	.menu-close{
+		position: absolute;
+		top: 20px;
+		right: 25px;
+		margin-left: 50px;
+		font-size: 36px;
+	}
+
+	nav ul {
+		margin-top: 30px;
+		display: flex;
+		flex-direction: column;
+		text-align: center;
+	}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 }
 	
 	
