--- a/home.css
+++ b/home.css
@@ -25,6 +25,13 @@ nav ul{
 	z-index: 10;
 }
 
+.nav-links a:hover {
+	text-decoration: underline;
+	text-decoration-color: #4695c1;
+	text-decoration-thickness: 7px;
+	text-underline-offset: 8px;
+}
+
  a{
 	text-decoration: none;
 	font-family: "Open Sans", sans-serif;
