--- a/home.css
+++ b/home.css
@@ -254,6 +254,13 @@ nav ul{
 		text-align: center;
 	}
 
+
+	.nav-links a:hover {
+		text-decoration: underline;
+		text-decoration-color: #FFF;
+		text-decoration-thickness: 7px;
+		text-underline-offset: 8px;
+	}
 }
 
 
