--- a/contact.css
+++ b/contact.css
@@ -259,48 +259,20 @@ a:hover .contact {
         margin-top: 30px;
         margin-left: 0%;
         margin-right: 20px;
-}
+	}
 
-nav ul {
+	nav ul {
     margin-top: 30px;
     display: flex;
     flex-direction: column;
     text-align: center;
-}
+	}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+	.nav-links a:hover {
+	text-decoration: underline;
+	text-decoration-color: #FFF;
+	text-decoration-thickness: 7px;
+	text-underline-offset: 10px;
+	}
 }
 	
